--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,8 @@ pnpm-debug.log*
 # Optional npm cache directory
 .npm
 
-.package-lock.json
+package-lock.json
+
 
 # Optional eslint cache
 .eslintcache
